--- a/JenkinsFile
+++ b/JenkinsFile
@@ -29,6 +29,7 @@ steps{
 stage("Sonar Scan"){
 	steps{
 		withSonarQubeEnv(credentialsId: 'Sonar-jenkins-token') {
+			bat '''
 sonar.projectKey=maven-project-jenkins-lab
 sonar.projectName=maven-project-jenkins-lab
 sonar.sources=src/main
@@ -40,6 +41,7 @@ sonar.surefire.reportsPath=target/surefire-reports
 sonar.jacoco.reportPath=target/jacoco.exec
 sonar.java.binaries=target/classes
 sonar.java.coveragePlugin=jacoco
+'''
 		}
 	}
 }
