--- a/JenkinsFile
+++ b/JenkinsFile
@@ -29,19 +29,7 @@ steps{
 stage("Sonar Scan"){
 	steps{
 		withSonarQubeEnv(installationName: 'Sonarqube',credentialsId: 'Sonar-jenkins-token') {
-			bat """
-sonar.projectKey=jenkins_maven.eclipse
-sonar.projectName=jenkins_maven.eclipse
-sonar.sources=src/main
-sonar.sourceEncoding=UTF-8
-sonar.language=jav
-sonar.test=src/test
-sonar.junit.reportsPath=target/surefire-reports
-sonar.surefire.reportsPath=target/surefire-reports
-sonar.jacoco.reportPath=target/jacoco.exec
-sonar.java.binaries=target/classes
-sonar.java.coveragePlugin=jacoco
-"""
+			bat "mvn clean package sonar:sonar"
 		}
 	}
 }
