this is the new jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,9 +6,6 @@ maven 'maven-3.8.4'
 jdk 'jdk-11'
 }
 
-environment{
-	SONAR_RUNNER_HOME = 
-}
 stages{
 stage("Clean") {
   steps{
@@ -28,22 +25,13 @@ steps{
   bat "mvn install -DskipTests"
 }
 }
+
 stage("Sonar Scan"){
 	steps{
-		withSonarQubeEnv(credentialsId: 'Sonar-jenkins-token', installationName: 'Sonarqube') {
-			bat "sonar-scanner
--Dsonar.projectKey=maven-project-jenkins-lab
--Dsonar.projectName=maven-project-jenkins-lab
--Dsonar.sources=src/main
--Dsonar.sourceEncoding=UTF-8
--Dsonar.language=jav
--Dsonar.test=src/test
--Dsonar.junit.reportsPath=target/surefire-reports
--Dsonar.surefire.reportsPath=target/surefire-reports
--Dsonar.jacoco.reportPath=target/jacoco.exec
--Dsonar.java.binaries=target/classes
--Dsonar.java.coveragePlugin=jacoco
-"
+	    script {
+		withSonarQubeEnv(installationName: 'Sonarqube',credentialsId: 'Sonar-jenkins-token') {
+			bat "\"C:\\Users\\abdul\\Downloads\\sonar-scanner-cli-5.0.1.3006-windows\\sonar-scanner-5.0.1.3006-windows\\bin\\sonar-scanner.bat\" -Dsonar.projectKey=jenkins_maven.eclipse -Dsonar.projectName=jenkins_maven.eclipse -Dsonar.sources=src/main -Dsonar.sourceEncoding=UTF-8 -Dsonar.language=jav -Dsonar.test=src/test -Dsonar.junit.reportsPath=target/surefire-reports -Dsonar.surefire.reportsPath=target/surefire-reports -Dsonar.jacoco.reportPath=target/jacoco.exec -Dsonar.java.binaries=target/classes -Dsonar.java.coveragePlugin=jacoco"
+		}
 		}
 	}
 }
