--- a/JenkinsFile
+++ b/JenkinsFile
@@ -35,5 +35,12 @@ stage("Sonar Scan"){
 		}
 	}
 }
+stage("Deploy"){
+	steps{
+	    script {
+		deploy adapters: [tomcat9(credentialsId: 'tomcat', path: '', url: 'http://localhost:8090')], contextPath: 'jenkins_maven.eclipse', war: '**/*.war'
+		}
+	}
+}
 }
 }
